// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "resource.grpc.resourceManage";
option java_outer_classname = "ResourceManageProto";
option objc_class_prefix = "RESOURCE";

// 定义包名，避免命名冲突
package resource;

// 定义服务
service ResourceManage {
  rpc saveResource (SaveResourceRequest) returns (SaveResourceResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message SaveResourceRequest {
  string resCode = 1;
  Operator operator = 2;
  string resInfos = 3;
}

message SaveResourceResponse {
  int32 count = 1;
}

message Operator {
  string userCode = 1;
  string realName = 2;
}